--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-     "semi": true,
-     "singleQuote": false,
-     "trailingComma": "all",
-     "tabWidth": 2,
-     "useTabs": false,
-     "arrowParens": "always",
-     "bracketSpacing": true
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "useTabs": false,
+  "arrowParens": "always",
+  "bracketSpacing": true
 }
